<resources>
    <string name="app_name">ToDo list</string>
    <string name="myTasks">Мои задачи</string>
    <string name="taskPlaceHolder">Что надо сделать…</string>
    <string name="priorityLabel">Приоритет</string>
    <string name="reqularPriorityLabel">Обычный</string>
    <string name="lowPriorityLabel">↓↓ Низкий</string>
    <string name="highPriorityLabel">!! Высокий</string>
    <string name="deadlinLabel">Сделать до</string>
    <string name="deleteLabel">Удалить</string>
    <string name="saveLabel">СОХРАНИТЬ</string>
    <string name="noDeadlineLabel">Дедлайн не задан</string>
    <string name="okLabel">OK</string>
    <string name="cancelLabel">Отменить</string>
    <string name="myItemsLabel">Мои задачи</string>
    <string name="doneLabel">Выполнено - %1$s</string>
    <string name="errorLabel">Ошибка: %1$s</string>
    <string name="unknownErrorLabel">unknown error</string>
    <string name="noItemsLabel">Нет задач</string>
    <string name="reloadLabel">Повторить</string>
    <string name="notItemsLabel">Нет задач!</string>
    <string name="settingsLabel">Настройки</string>
    <string name="appThemeLabel">Тема оформления</string>
    <string name="aboutAppLabel">О приложении</string>
    <string name="SystemTheme">Системная</string>
    <string name="DarkTheme">Тёмная</string>
    <string name="LightTheme">Светлая</string>
    <string name="backDescr">назад</string>
    <string name="deleteDescr">удалить</string>
    <string name="deleteDeadlineDescr">удалить дедлайн</string>
    <string name="settingsDescr">настройки</string>
    <string name="visibleDescr">показать или скрыть выполненные дела</string>
    <string name="addItemDescr">добавить дело</string>
    <string name="updateDescr">обновить</string>
    <string name="priorityDescr">приоритет</string>
    <string name="selectedDescr">дело выбрано</string>
    <string name="showAllDescr">показать все дела</string>
    <string name="showNotDoneDescr">показать невыполненные дела</string>
    <string name="loadingDescr">загрузка</string>
    <string name="doneDescr">выполнено</string>
    <string name="notDoneDescr">не выполнено</string>
    <string name="itemDescr">"дело: "</string>
    <string name="isSelectedDescr">выбрано</string>
    <string name="isNotSelectedDescr">не выбрано</string>
    <string name="onThemeClickLabel">открыть окно выбора темы</string>
    <string name="changeToDoneCheckBoxClickLabel">отметить выполненным</string>
    <string name="changeToNotDoneCheckBoxClickLabel">отметить невыполненным</string>
    <string name="themeSelectedDescr">тема выбрана</string>
    <string name="themeNotSelectedDescr">тема не выбрана</string>
    <string name="onThemeOnClickLabel">применить тему</string>
</resources>